add google analyse and fix text bug
Signed-off-by: HackerMi <wawi1985@163.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             prettyPrint();
         });
      </script>
-     <!--{% include google_analysis.md %}-->
+     {% include google_analysis.md %}
 </body>
 </html>
 
