--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,16 @@
              | Designed by <a href="https://github.com/hushaw/hushaw.github.com">hushaw</a>
          </span>
      </div>
+     {% include google_adsense_horizontal.md %}
+     </div>
+     <div class="ads-top">
+        {% include google_adsense_horizontal.md %}
+     </div>
+     <div class="ads-left">
+        {% include google_adsense_vertical.md %}
+     </div>
+     <div class="ads-right">
+        {% include google_adsense_vertical.md %}
      </div>
      <script src="/static/js/bootstrap.js" type="text/javascript"></script>
      <script src="/static/google-code-prettify/prettify.js" type="text/javascript"></script>
