--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
-    <meta name="description" content="HackerMi's Blog">
-    <meta name="author" content="HackerMi">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/favicon.ico" rel="shortcut icon">
+    <!-- meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="generator" content="Jekyll" />
+    <meta name="author" content="{{ site.author.name }}" />
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+    <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
+    <!-- atom -->
+    <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.url }}{{ site.feed }}" />
+    <link rel="shortcut icon" href="{{ site.favicon }}" type="image/x-icon" />
+    <!-- css -->
     <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="/static/css/font-awesome.css" rel="stylesheet" type="text/css" media="all">
     <link href="/static/google-code-prettify/prettify.css" rel="stylesheet" type="text/css" media="all">
