--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,13 @@ layout: default
             {% for tag in page.tags %}
             <a href="/tags.html#{{ tag }}-ref">{{ tag }}</a>
             {% endfor %}
+        </span>
+        {% unless page.title contains '【转载】' %}
+        <span><i class="fa fa-ellipsis-v"></i></span>
         <span>
+           版权信息: 【自由转载-非商用-非衍生-<a href="/about.html">保持署名</a>】
+        </span>
+        {% endunless %}
     </div>
     <div class="post-entry">
         {{ content }}
