--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,44 +22,48 @@
 </head>
 <body>
      <div class="page-container">
-     <div class="page-heading">
-         <div class="page-brand">
-             <h1><a href="/">HackerMi</a></h1>
-             <div class="post-meta">
-             <h2>知&nbsp;&nbsp;行&nbsp;&nbsp;合&nbsp;&nbsp;一</h2>
-             </div>
-         </div>
-         <div class="page-navbar">
-             <div class="page-navbar-container">
-                 <ul class="page-nav">
-                     <li><a href="/">首页</a></li>
-                     <li><a href="/tech.html">技术</a></li>
-                     <li><a href="/life.html">生活</a></li>
-                     <li><a href="/about.html">关于</a></li>
-                 </ul>
-             </div>
-         </div>
-     </div>
-     <div class="page-article">
-         {{ content }}
-     </div>
-     <div class="page-footer">
-         <span>
-             Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> 
-             | Designed by <a href="https://github.com/hushaw/hushaw.github.com">hushaw</a>
-         </span>
-     </div>
-     {% include google_adsense_horizontal.md %}
-     </div>
-     <div class="ads-top">
-        {% include google_adsense_horizontal.md %}
-     </div>
-     <div class="ads-left">
-        {% include google_adsense_vertical.md %}
-     </div>
-     <div class="ads-right">
-        {% include google_adsense_vertical.md %}
-     </div>
+		 <div class="page-heading">
+			 <div class="page-brand">
+				 <h1><a href="/">HackerMi</a></h1>
+				 <div class="post-meta">
+				 <h2>知&nbsp;&nbsp;行&nbsp;&nbsp;合&nbsp;&nbsp;一</h2>
+				 </div>
+			 </div>
+			 <div class="page-navbar">
+				 <div class="page-navbar-container">
+					 <ul class="page-nav">
+						 <li><a href="/">首页</a></li>
+						 <li><a href="/tech.html">技术</a></li>
+						 <li><a href="/life.html">生活</a></li>
+						 <li><a href="/about.html">关于</a></li>
+					 </ul>
+				 </div>
+			 </div>
+		 </div>
+		 <div class="page-article">
+			 {{ content }}
+		 </div>
+		 <div class="page-footer">
+			 <span>
+				 Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> 
+				 | Designed by <a href="https://github.com/hushaw/hushaw.github.com">hushaw</a>
+			 </span>
+		 </div>
+		 {% if site.google.adsense_config %}
+			{% include google_adsense_horizontal.md %}
+		 {% endif %}
+	 </div>
+	 {% if site.google.adsense_config %}
+		 <div class="ads-top">
+			{% include google_adsense_horizontal.md %}
+		 </div>
+		 <div class="ads-left">
+			{% include google_adsense_vertical.md %}
+		 </div>
+		 <div class="ads-right">
+			{% include google_adsense_vertical.md %}
+		 </div>
+     {% endif %}
      <script src="/static/js/bootstrap.js" type="text/javascript"></script>
      <script src="/static/google-code-prettify/prettify.js" type="text/javascript"></script>
      <script type="text/javascript">
