--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 						 <li><a href="/">首页</a></li>
 						 <li><a href="/tech.html">技术</a></li>
 						 <li><a href="/life.html">生活</a></li>
-						 <li><a href="/about.html">关于</a></li>
+						 <li><a href="/about">关于</a></li>
 					 </ul>
 				 </div>
 			 </div>
