--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 				 <div class="page-navbar-container">
 					 <ul class="page-nav">
 						 <li><a href="/">首页</a></li>
-						 <li><a href="/tech">技术</a></li>
+						 <li><a href="/tech">产品 & 技术</a></li>
 						 <li><a href="/life">生活</a></li>
 						 <li><a href="/about">关于</a></li>
 					 </ul>
